Fix image display on small screens
This seems like a fairly sane default.

--- a/web/css/default.css
+++ b/web/css/default.css
@@ -39,6 +39,10 @@ em {
   font-style: italic;
 }
 
+img {
+  max-width: 100%;
+}
+
 #content > :last-child {
   padding-bottom: 0;
 }
